attempt to fix rounding on mobile

--- a/styles.css
+++ b/styles.css
@@ -364,5 +364,6 @@ section {
         width: auto;
         padding: 8px;
         object-fit: contain;
+        border-radius: 20px;
     }
 }
